# S4

./: .backupindex  .gitignore  .travis.yml  CHANGELOG.rst  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  README.md  README.rst  TODO  appveyor.yml  circle.yml  dev-requirements.txt  lint-requirements.txt  local_sync_client.py  main.py  pyproject.toml  requirements.txt  s3b  s3b.py  setup.cfg  setup.py  sync  tox.ini  whitelist.txt
.circleci/: config.yml
docs/: Makefile  conf.py  index.rst
s3backup/: __init__.py  clients.py  local_sync_client.py  main.py  s3_sync_client.py  sync.py  utils.py
s3backup/clients/: __init__.py  entries.py  local.py  s3.py  utils.py
s4/: __init__.py  cli.py  diff.py  inotify_recursive.py  progressbar.py  resolution.py  sync.py  utils.py
s4/clients/: __init__.py  local.py  s3.py
s4/commands/: __init__.py  add_command.py  autosetup_command.py  daemon_command.py  edit_command.py  ls_command.py  rm_command.py  sync_command.py  targets_command.py
src/: s3_sync_client.py
tests/: conftest.py  test_cli.py  test_clients.py  test_diff.py  test_inotify_recursive.py  test_local_sync_client.py  test_main.py  test_resolution.py  test_s3_sync_client.py  test_s3b.py  test_s3backup.py  test_sync.py  test_utils.py  test_watch_dir.py  utils.py
tests/clients/: test_clients.py  test_local.py  test_s3.py
tests/commands/: test_add_command.py  test_daemon_command.py  test_ls_command.py  (+4 more)
watchdir/: __init__.py  watcher_posix.py  watcher_posix_INotify.py  watcher_win32.py  watcher_win32_FindFirstChangeNotification.py  watcher_win32_ReadDirectoryChanges.py
