[tool.poetry]
name = "s4"
version = "0.4.0"
license = "GPL-3.0"
description = "Fast and cheap synchronisation of files using Amazon S3"
authors = ["Michael Aquilina <michaelaquilina@gmail.com>"]
repository = "https://github.com/MichaelAquilina/S4"
homepage = "https://github.com/MichaelAquilina/S4"
keywords = ["aws", "s3", "backup", "sync"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.5"
boto3 = "^1.7"
clint = "^0.5.1"
filelock = "^3.0"
python-magic = "^0.4.15"
tabulate = "^0.8.2"
tqdm = "^4.23"
inotify-simple = "^1.1"
pathspec = "^0.5.6"

[tool.poetry.dev-dependencies]
Faker = "^0.8.17"
freezegun = "^0.3.10"
moto = "^1.3"
pytest = "^3.6"
pytest-cov = "^2.5"
pytest-timeout = "^1.3"
pytz = "^2018.5"
flake8 = "^3.5"
isort = "^4.3"

[tool.poetry.scripts]
s4 = "s4.cli:entry_point"
